Adjust images and suspense content

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/image": "^1.10.0",
     "@nuxtjs/sitemap": "^7.4.3",
     "eslint": "^9.18.0",
     "nuxt": "^3.14.1592",
