--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue-router": "latest"
   },
   "devDependencies": {
+    "@nuxt/fonts": "^0.11.4",
     "@nuxtjs/tailwindcss": "^6.12.2",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
